default/objects/Integrated_Object__mdt/Integrated_Object__mdt.object-meta.xml
<CustomObject>
    <description>This metadata object will contain records that define what integrations should occur in the environment.</description>
    <label>Integrated Object</label>
    <pluralLabel>Integrated Objects</pluralLabel>
</CustomObject>