default/objects/Integrated_Object__mdt/fields/Conditional_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Field_Name__c</fullName>
    <inlineHelpText>A Boolean field on the integrated sobject that will control when the integration should be triggered</inlineHelpText>
    <label>Conditional Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>