default/objects/Integrated_Object__mdt/fields/Is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is set for tests so integrations can be configured to get test coverage that are ignored in the live application.</inlineHelpText>
    <label>Is Test Record</label>
    <type>Checkbox</type>
</CustomField>