default/objects/Integrated_Object__mdt/fields/Maximum_Number_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Retries__c</fullName>
    <defaultValue>999</defaultValue>
    <inlineHelpText>Enter the maximum times to retry before ignoring the records.</inlineHelpText>
    <label>Maximum Number of Retries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>