default/objects/Integrated_Object__mdt/fields/Maximum_Records_Per_Call__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Records_Per_Call__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Maximum Records Per Call</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>