default/objects/Integrated_Object__mdt/fields/Row_Create__c.field-meta.xml
<CustomField>
    <fullName>Row_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true if the integration API should be called on Create</inlineHelpText>
    <label>Row Create</label>
    <type>Checkbox</type>
</CustomField>