default/objects/Integrated_Object__mdt/fields/Row_Update__c.field-meta.xml
<CustomField>
    <fullName>Row_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true if the integration API should be called on Update.</inlineHelpText>
    <label>Row Update</label>
    <type>Checkbox</type>
</CustomField>