default/objects/Integrated_Object__mdt/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <inlineHelpText>Enter the class that</inlineHelpText>
    <label>Service Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>