default/objects/Integrated_Object__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <inlineHelpText>Enter the API name for the SObject being integrated.</inlineHelpText>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>