default/objects/Integrated_Object__mdt/fields/Sobject_Integrated_Status_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Integrated_Status_Field_Name__c</fullName>
    <inlineHelpText>The API name created on the sobject to lookup to the Integration Status Record</inlineHelpText>
    <label>Sobject Integrated Status Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>